--- a/simple_NeuralNetwork.ipynb
+++ b/simple_NeuralNetwork.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOahTUugUbxSwS8TRjs7GPh",
+      "authorship_tag": "ABX9TyMdrwNdepmOQNm+B5pofgY5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1236,7 +1236,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# use teh loaded model - use data from before\n",
+        "# use the loaded model - use data from before\n",
         "new_iris = torch.tensor([4.7, 3.2, 1.3, 0.2])\n",
         "newer_iris = torch.tensor([5.9, 3.0, 5.1, 1.8])"
       ],
